# dspyed

./: .editorconfig  .env.example  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude/hooks/: session-start.sh
.githooks/: commit-msg  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: check.yml  commit-style.yml  scheduled-check.yml
data/splits/: dev_eval_200.json  optim_val_100.json  train_200.json
experiments/configs/: E01.json  E02.json  E03.json  E04.json  E05.json  E06.json
experiments/results/: E01-smoke.json  E01.json  E02.json  E03.json  E04.json  E05.json  E06.json
scripts/: _lib-stale-branches.sh  check-commit-msg.sh  check-links.sh  check-stale-branches.sh  check_anchors.py  sweep-stale-branches.sh
src/dspyed/: __init__.py  cli.py  config.py
src/dspyed/api/: __init__.py  app.py
src/dspyed/data/: __init__.py  schema.py  spider.py  splits.py
src/dspyed/engine/: __init__.py  compare.py  executor.py
src/dspyed/eval/: __init__.py  harness.py  metric.py  report.py
src/dspyed/optim/: __init__.py  compile.py
src/dspyed/pipeline/: __init__.py  baselines.py  modules.py  signatures.py
tests/: conftest.py
tests/api/: test_app.py
tests/dataset/: test_gold_acceptance.py
tests/pipeline/: test_harness.py  test_modules_dummylm.py  test_optim.py
tests/unit/: test_cli.py  test_compare.py  test_executor.py  test_metric.py  test_schema.py  test_spider.py  test_splits.py
