[project]
name = "dspyed"
version = "0.1.0"
description = "Compiled, not prompted — a measured text-to-SQL pipeline on Spider, built with DSPy."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "Ed Chapman" }]
dependencies = [
    "dspy>=3.0",
    "fastapi>=0.115",
    "huggingface-hub>=0.30",
    "optuna>=4.9.0",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "slowapi>=0.1.9",
    "sqlglot>=26",
    "tqdm>=4.66",
    "uvicorn[standard]>=0.51.0",
]

[project.urls]
Repository = "https://github.com/edjchapman/dspyed"

[project.scripts]
dspyed = "dspyed.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.28",
    "httpx2>=2.7.0",
    "pyarrow>=18", # `dspyed download` only: parquet → JSON conversion, never at runtime
    "pyright>=1.1.390",
    "pytest>=8.3",
    "pytest-socket>=0.7",
    "ruff>=0.8",
]
# Figures are regenerated on demand (`make report`), not needed at runtime or in CI.
analysis = ["matplotlib>=3.9"]

[tool.uv]
# litellm >=1.92 ships manylinux-only wheels (new Rust extension, no macOS builds),
# so macOS falls back to an sdist whose Cargo.lock needs a newer cargo than local
# toolchains carry. 1.91.4 is the last release with a universal wheel — constrain
# (not depend): litellm is dspy's implementation detail, this only shapes resolution.
# Drop when litellm publishes macOS wheels again.
constraint-dependencies = ["litellm<1.92"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dspyed"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Base: pyflakes, pycodestyle, isort, pyupgrade, bugbear. Plus: Ruff-specific (RUF),
# simplify (SIM), comprehensions (C4), pytest-style (PT), pathlib (PTH), misc-lints
# (PIE), naming (N), blind-except (BLE), and flake8-bandit (S) — the lightweight
# security scan, which matters here: this project executes model-generated SQL.
select = ["F", "E", "W", "I", "UP", "B", "RUF", "SIM", "C4", "PT", "PTH", "PIE", "N", "BLE", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S311"]  # asserts are the point of a test; seeded random is deliberate
"conftest.py" = ["S101"]
"scripts/*" = ["S607"]  # dev validators invoke `git` from PATH (portable across OSes)

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
typeCheckingMode = "basic"
# The measurement instruments are held to strict — a type hole in the executor,
# the comparison, or the metric is a wrong headline number. DSPy-facing code
# (pipeline/, optim/, the eval harness orchestration) stays basic: dspy is
# loosely typed, so strictness there would only breed ignore-comments.
strict = ["src/dspyed/engine", "src/dspyed/eval/metric.py"]
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"
# An xpassing xfail is a failure (the bug was fixed — drop the marker).
xfail_strict = true
markers = [
    "llm: exercises a live LLM API (excluded in CI; run explicitly with `pytest -m llm`)",
]
# Warnings are errors, so a deprecated API or a misconfigured test fails loudly.
# Add module-scoped ignores ONLY for genuine third-party deprecations we don't own.
filterwarnings = [
    "error",
    # dspy's own avatar module trips dspy's own InputField 'prefix' deprecation at
    # import time — third-party internal churn, nothing we call.
    "ignore:The 'prefix' argument in InputField/OutputField is deprecated:DeprecationWarning",
]
